# math-operator-units-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/experiments/: README.md  experiment_plan_v1.yaml  experiment_plan_v2.yaml  gpt_bias_fusion_factory_surface_v3.yaml  gpt_bias_fusion_factory_surface_v3_smoke.yaml  gpt_bias_fusion_factory_surface_v4.yaml  gpt_bias_fusion_factory_surface_v4_smoke.yaml  gpt_bias_fusion_factory_v2.yaml  gpt_operator_factory_v1.yaml  model_design_pilot_identity_retention.yaml  model_design_pilot_weak_unanchored.yaml
configs/experiments/bias_factory/: spec_1m_add.yaml  spec_1m_max.yaml  spec_1m_min.yaml  spec_1m_neg.yaml  spec_1m_sum.yaml  spec_medium_add.yaml  spec_medium_max.yaml  spec_medium_min.yaml  spec_medium_neg.yaml  spec_medium_sum.yaml  spec_nano_add.yaml  spec_nano_max.yaml  spec_nano_min.yaml  spec_nano_neg.yaml  spec_nano_sum.yaml  spec_small_add.yaml  spec_small_max.yaml  spec_small_min.yaml  spec_small_neg.yaml  spec_small_sum.yaml
configs/experiments/d4_specialist_ablation/: neg_a.yaml  neg_b.yaml  neg_c.yaml  sum_a.yaml  sum_b.yaml  sum_c.yaml
configs/experiments/d5_operator_unit_factory/: neg_base.yaml  neg_scratch.yaml  shared_base.yaml  sum_base.yaml  sum_scratch.yaml
configs/model/: gpt_nano_v1.yaml  gpt_operator_1m_surface_v3.yaml  gpt_operator_1m_v1.yaml  gpt_operator_1m_v2.yaml
configs/operators/: applicability_policy.yaml  math_expansion_backlog.yaml  registry.yaml
configs/tokenizer/: operator_experiment_v1.yaml  operator_experiment_v2.yaml  tokenizer_core_v1.yaml
docs/: arch_linux_runbook.md  d5_operator_unit_factory.md  equivalence_trace_training_plan.md  experiment_plan.md  experiment_plan_v2.md  experiment_protocol.md  fusion_evaluation_runbook.md  generation_path_reliability_calibrator.md  gpt_operator_model_factory.md  logit_bias_semantics.md  model_design_pilot.md  operator_applicability_constraints.md  operator_catalog_research_plan.md  operator_ownership_complement_calibrator.md  parallel_sequence_bias_control.md  raw_fusion_failure_observations.md  reliability_calibrator_training_plan.md  reserved_token_strategy.md  runtime_bias_set_swapping.md  shared_numeric_equality_abi.md  tokenizer_design.md  tokenizer_freeze_contract.md  unassigned_reserved_token_policy.md
scripts/: bootstrap_arch_linux.sh  d4_eval_trajectory.sh  d4_full_diagnostic.py  d4_launch_specialist_ablation.sh  d4_summary_trajectory.sh  d5_artifact_guard.py  d5_operator_unit_factory.py  eval_d4_trajectory.py  eval_d4_trajectory.sh  generate_bias_factory_configs.py  run_bias_factory.sh  run_bias_fusion_factory_surface_v3.sh  run_bias_fusion_factory_surface_v4.sh  run_bias_fusion_factory_v2.sh  run_bias_fusion_sweep.py  run_d4_ablation.sh  run_d4_full_diagnostic.sh  run_d5_operator_unit_factory.sh  run_model_design_pilot.sh  run_surface_v4_cuda_smoke.sh  stage_d4_shared_base.py  status_model_design_pilot.sh  watch_bias_fusion_factory_v2.sh  watch_model_design_pilot.sh
src/opfusion/: __init__.py  audit.py  final_eval_policy.py  fusion_diagnostics.py  fusion_eval.py  fusion_eval_seeded.py  io.py  specialist_failure_diagnostics.py
src/opfusion/model/: __init__.py  checkpoint.py  config.py  gpt.py
src/opfusion/operators/: policy.py
src/opfusion/tokenizer/: __init__.py  build_vocab.py  (+2 more)
tests/: test_alpha_invariance.py  test_d5_operator_unit_factory.py  test_experiment_plan.py  test_final_evaluation_policy.py  test_fusion_eval.py  test_model_design_runtime.py  test_operator_factory_runtime.py  test_operator_factory_v1.py  test_operator_factory_v2.py  test_pilot_scientific_controls.py  test_pilot_watchdog.py  test_real_hardware_smoke.py  test_repository_safety.py  test_specialist_failure_diagnostics.py  test_surface_data_v3.py  test_surface_verifier_regressions.py
(+16 files in other folders)
