[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "operator-unit-fusion"
version = "0.7.0"
description = "Dependency-ordered GPT model factory and logit-space bias-fusion experiments with fixed tokenizer ABIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
publish = [
  "huggingface_hub>=0.24",
]

[project.scripts]
opfusion-audit = "opfusion.audit:main"
opfusion-audit-data = "opfusion.training.audit_data:main"
opfusion-audit-data-design = "opfusion.training.audit_data_design:main"
opfusion-audit-pilot-pairs = "opfusion.training.audit_pilot_pairs:main"
opfusion-train-one = "opfusion.training.trainer:main"
opfusion-train-one-surface = "opfusion.training.trainer_surface:main"
opfusion-train-one-design = "opfusion.training.trainer_design_hardened:main"
opfusion-train-batch = "opfusion.training.batch:main"
opfusion-train-batch-surface = "opfusion.training.batch_surface:main"
opfusion-train-batch-design = "opfusion.training.batch_design:main"
opfusion-evaluate-fusion = "opfusion.fusion_eval_seeded:main"
opfusion-evaluate-unit-diagnostics = "opfusion.fusion_diagnostics:main"
opfusion-diagnose-specialist-failures = "opfusion.specialist_failure_diagnostics:main"
opfusion-checkpoint-trajectory = "opfusion.training.analyze:main"
opfusion-export-bundle = "opfusion.training.export:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/opfusion"]
